--- a/11.html
+++ b/11.html
@@ -10,13 +10,12 @@
 <body>
     <!-- Section En-tête -->
     <header class="header">
-        <div class="logo-container">
-            <!-- Logo -->
-            <img src="logo-on-the-go.png" alt="Logo On the Go Déneigement">
-        </div>
-        <h1>On the Go Déneigement</h1>
-        <p>Votre solution hivernale rapide et fiable !</p>
-    </header>
+    <div class="logo-container">
+        <img src="logo-on-the-go.png" alt="Logo On the Go Déneigement" style="max-width: 150px; margin: auto; display: block;">
+    </div>
+    <h1>On the Go Déneigement</h1>
+    <p>Votre solution hivernale rapide et fiable !</p>
+</header>
 
     <!-- Section Présentation -->
     <section class="presentation">
